--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\""
     },
     "dependencies": {
+        "@material-ui/core": "^4.9.9",
         "body-parser": "^1.19.0",
         "express": "^4.16.4",
         "multer": "^1.4.2",
@@ -14,6 +15,7 @@
         "nodemon": "^2.0.2"
     },
     "devDependencies": {
+        "@material-ui/codemod": "^4.5.0",
         "concurrently": "^4.0.1"
     }
 }
