--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     },
     "dependencies": {
         "@material-ui/core": "^4.9.9",
+        "@material-ui/icons": "^4.9.1",
         "body-parser": "^1.19.0",
         "express": "^4.16.4",
         "multer": "^1.4.2",
